--- a/Optimization/TSP.ipynb
+++ b/Optimization/TSP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,21 +23,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[6, 7, 8, 5, 2, 7],\n",
-       "       [4, 4, 1, 5, 2, 1],\n",
-       "       [4, 9, 6, 8, 5, 4],\n",
-       "       [2, 9, 4, 7, 2, 1],\n",
-       "       [3, 6, 7, 3, 7, 5],\n",
-       "       [6, 9, 4, 3, 7, 9]])"
+       "array([[1, 6, 7, 7, 7, 1],\n",
+       "       [7, 6, 3, 1, 4, 4],\n",
+       "       [4, 5, 4, 8, 3, 7],\n",
+       "       [7, 4, 9, 5, 5, 8],\n",
+       "       [6, 7, 5, 7, 9, 1],\n",
+       "       [1, 1, 7, 7, 1, 4]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
        "Expression(AFFINE, UNKNOWN, (1, 6))"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,64 +77,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Expression(AFFINE, NONNEGATIVE, (6, 6))"
+       "Expression(AFFINE, UNKNOWN, ())"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cp.multiply(dist,x)"
+    "x[i,j]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solution: 17.000000003564654\n",
-      "x: [[3.08093925e-11 1.20818099e-10 2.09333798e-11 3.81068088e-11\n",
-      "  1.00000000e+00 2.14170975e-11]\n",
-      " [2.52198603e-11 1.00382900e-09 9.99999999e-01 1.86331017e-11\n",
-      "  3.80252038e-11 2.99473936e-11]\n",
-      " [9.99999999e-01 4.59123115e-11 5.39251464e-11 2.14021832e-11\n",
-      "  5.05859798e-11 4.68296864e-10]\n",
-      " [3.76935538e-10 2.03903192e-11 4.53217393e-11 1.32968238e-11\n",
-      "  1.06606017e-10 9.99999999e-01]\n",
-      " [1.78062573e-10 9.99999999e-01 2.37607257e-11 9.69959791e-10\n",
-      "  1.74090851e-11 3.18286201e-11]\n",
-      " [2.91972183e-11 3.01687586e-11 9.71725867e-10 9.99999999e-01\n",
-      "  1.93238433e-11 1.11236791e-11]]\n"
+      "Solution: 16.999999999842455\n",
+      "x: [[ 4.23434728e-11 -2.21136230e-12 -9.63738270e-12 -8.51867064e-12\n",
+      "  -5.74847054e-12  1.00000000e+00]\n",
+      " [-4.17038889e-12 -8.24661122e-12  8.59830294e-12  1.00000000e+00\n",
+      "   6.35782792e-12  2.35104530e-13]\n",
+      " [ 1.00000000e+00  5.83116685e-12  2.19580211e-11  1.36450319e-12\n",
+      "   1.37912189e-12  1.36437954e-11]\n",
+      " [-3.43624199e-12  2.90821671e-12 -1.44279087e-12  1.20035106e-12\n",
+      "   1.00000000e+00  4.15720329e-14]\n",
+      " [ 5.03029306e-12  1.67972431e-12  1.00000000e+00  1.01852443e-11\n",
+      "  -2.04011278e-12  2.36638375e-12]\n",
+      " [ 4.36435694e-12  1.00000000e+00 -2.20468120e-12 -1.40951251e-12\n",
+      "  -7.13663152e-13 -8.89804171e-14]]\n"
      ]
     }
    ],
    "source": [
     "x = cp.Variable((6,6),boolean=True) # path \n",
     "f = sum(sum(cp.multiply(dist,x))) # sum of all paths walked\n",
-    "#f = sum([dist[i,:]*x[:,i] for i in range(6)])\n",
-    "\n",
+    "u = cp.Variable(6) # for MTZ\n",
     "g = []\n",
     "\n",
     "# 1 in 1 out for each place\n",
     "g.extend([cp.sum(x, axis=0,keepdims=True) == np.matrix('1,1,1,1,1,1')])\n",
     "g.extend([cp.sum(x, axis=1,keepdims=True) == np.matrix('1,1,1,1,1,1').T])\n",
-    "\n",
-    "for i in range(6):\n",
-    "    for j in range(6):\n",
-    "        # 0 or 1\n",
-    "        g.extend([x[i][j] >= 0])\n",
+    "g.extend([u >= 0])\n",
+    "for i in range(1,6):\n",
+    "    for j in range(1,6):\n",
+    "        if i != j:\n",
+    "            # mtz\n",
+    "            g.extend([(u[i] - u[j] + 6 * x[i,j]) <= 5])\n",
     "\n",
     "sol = cp.Problem(cp.Minimize(f), g)\n",
     "print(\"Solution:\", sol.solve())\n",
@@ -143,21 +143,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[False, False, False, False, True, False],\n",
-       " [False, False, True, False, False, False],\n",
+       "[[False, False, False, False, False, True],\n",
+       " [False, False, False, True, False, False],\n",
        " [True, False, False, False, False, False],\n",
-       " [False, False, False, False, False, True],\n",
-       " [False, True, False, False, False, False],\n",
-       " [False, False, False, True, False, False]]"
+       " [False, False, False, False, True, False],\n",
+       " [False, False, True, False, False, False],\n",
+       " [False, True, False, False, False, False]]"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -192,8 +192,10 @@
      "output_type": "stream",
      "text": [
       "0\n",
-      "4\n",
+      "5\n",
       "1\n",
+      "3\n",
+      "4\n",
       "2\n"
      ]
     },
@@ -203,41 +205,13 @@
        "True"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "walk(X,0,{})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "5\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 119,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "walk(X,3,{})"
    ]
   },
   {
