--- a/Optimization/TSP.ipynb
+++ b/Optimization/TSP.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -21,15 +21,15 @@
     {
      "data": {
       "text/plain": [
-       "array([[1000,   13,    9,    5,    7,   14],\n",
-       "       [  13, 1000,    7,   17,    7,    2],\n",
-       "       [   9,    7, 1000,   12,    2,    8],\n",
+       "array([[1000,   13,    9,    5,    7,    9],\n",
+       "       [  13, 1000,    7,   17,    7,   19],\n",
+       "       [   9,    7, 1000,   12,    2,   12],\n",
        "       [   5,   17,   12, 1000,   11,    9],\n",
-       "       [   7,    7,    2,   11, 1000,   17],\n",
-       "       [  14,    2,    8,    9,   17, 1000]])"
+       "       [   7,    7,    2,   11, 1000,   13],\n",
+       "       [   9,   19,   12,    9,   13, 1000]])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,26 +41,26 @@
     "M = 1000 # using M to substitutde for \"infinity\"\n",
     "## (to make sure we don't \"walk to\" current location)\n",
     "\n",
-    "dist = np.array([[M, 13, 9, 5, 7, 14], \n",
-    "          [13, M, 7, 17, 7, 2], \n",
-    "          [9, 7, M, 12, 2, 8], \n",
+    "dist = np.array([[M, 13, 9, 5, 7, 9], \n",
+    "          [13, M, 7, 17, 7, 19], \n",
+    "          [9, 7, M, 12, 2, 12], \n",
     "          [5, 17, 12, M, 11, 9], \n",
-    "          [7, 7, 2, 11, M, 17], \n",
-    "          [14, 2, 8, 9, 17, M]])\n",
+    "          [7, 7, 2, 11, M, 13], \n",
+    "          [9, 19, 12, 9, 13, M]])\n",
     "dist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solution: 32.00000000102463\n",
-      "order: [1.20545082 2.84265296 1.6708006  5.42591459 0.45053505 4.10620184]\n"
+      "Solution: 46.99999999982462\n",
+      "order: [1.42026007 1.54755106 2.68901005 5.02167265 0.39613127 3.83650415]\n"
      ]
     }
    ],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -126,9 +126,9 @@
      "text": [
       "St. Michael Kirche\n",
       "Museum Island\n",
-      "Christmas Market\n",
       "Brandenburg Gate\n",
-      "Jewish Memorial\n",
+      "Christmas Market\n",
+      "East Side Gallery\n",
       "Markethalle Nuen\n"
      ]
     }
@@ -142,7 +142,7 @@
     "       2: \"Christmas Market\",\n",
     "       3: \"Markethalle Nuen\",\n",
     "       4: \"Museum Island\",\n",
-    "       5: \"Jewish Memorial\"}\n",
+    "       5: \"East Side Gallery\"}\n",
     "\n",
     "# get ordering\n",
     "order = [0] + list(u.value[1:])\n",
@@ -173,13 +173,6 @@
     "walk(X,0,{})\n",
     "''';"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
