--- a/Optimization/CourseScheduling.ipynb
+++ b/Optimization/CourseScheduling.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -13,79 +20,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "'''\n",
-    "# distance matrix between semesters\n",
-    "## since winter breaks are smaller, 1-2,3-4,506\n",
-    "## are shorter that 2-3,4-5,6-7\n",
+    "# the functions for calculating the terms in the optimization function\n",
+    "# written in python to be more readable (no list comprehension)\n",
     "\n",
-    "dist = np.array([[0,1,4,9,16,25,36,49,64],\n",
-    "                 [100,0,1,4,9,16,25,36,49],\n",
-    "                 [100,100,0,2,9,16,25,36,49],\n",
-    "                 [100,100,100,0,1,4,9,16,25],\n",
-    "                 [100,100,100,100,0,2,9,16,25],\n",
-    "                 [100,100,100,100,100,0,1,4,9],\n",
-    "                 [100,100,100,100,100,100,0,2,9],\n",
-    "                 [100,100,100,100,100,100,100,0,1],\n",
-    "                 [100,100,100,100,100,100,100,100,0]\n",
-    "                ])\n",
-    "\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def dist(schedule,prereq,N):\n",
+    "def dist(schedule,P,N):\n",
     "    dist = 0\n",
     "    for i in range(N):\n",
     "        for j in range(N):\n",
-    "            if prereq[i][j] > 0.99:\n",
+    "            if P[i][j] > 0.99:\n",
     "                dist += schedule[j].index(1) - schedule[i].index(1)\n",
     "    return(dist)\n",
     "\n",
-    "def deviation(schedule, loads, S, N):\n",
-    "    ideal = sum(loads)/S\n",
+    "def deviation(schedule, L, S, N, A):\n",
     "    diff = 0\n",
     "    for s in range(S):\n",
-    "        load = sum([schedule[c][s]*loads[c] for c in range(N)])\n",
+    "        ideal = A[s]/ sum(A)\n",
+    "        load = sum([schedule[c][s]*L[c]/sum(L) for c in range(N)])\n",
     "        diff += abs(load-ideal)\n",
-    "    return(diff)"
+    "    return(diff)\n",
+    "''';"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Optization Problem and Solution"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 103,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "#_____PRINTS SCHEDULE BASED ON DECISION VAIRABLE RESULTS_____\n",
+    "\n",
+    "def recoverSchedule(matrix):\n",
+    "    if matrix is None:\n",
+    "        print(\"No Solution\")\n",
+    "    else:\n",
+    "        matrix = [[v > 0.99 for v in row] for row in matrix]\n",
+    "        print(\"________\")\n",
+    "        c = len(matrix)\n",
+    "        s = len(matrix[0])\n",
+    "        print(\"Schedule:\")\n",
+    "        for si in range(s):\n",
+    "            courses = []\n",
+    "            for ci in range(c):\n",
+    "                if matrix[ci][si]:\n",
+    "                    courses.append(ci)\n",
+    "            course_str = \",\".join([str(c+1) for c in courses])\n",
+    "            print(\"interval {}: {}\".format(str(si+1),course_str))\n",
+    "        print(\"________\")\n",
+    "    return(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#_____OPTIMIZATION FUNCTION_____\n",
+    "\n",
+    "def calcSchedule(N,S,phi,L,P,A):\n",
+    "    #_____DECISION VARIABLES_____\n",
+    "    #x[i][j] is boolean if course i assigned in semester j\n",
+    "    x = cp.Variable((N,S),boolean=True)\n",
+    "\n",
+    "    #_____OPTIMIZATION FUNCTION_____\n",
+    "    # distance between course and prereq\n",
+    "    dist = cp.sum([(x[j]*np.matrix([s for s in range(S)]).T)[0] - (x[i]*np.matrix([s for s in range(S)]).T)[0] for i in range(N) for j in range(N) if P[i][j] > 0.99])\n",
+    "    \n",
+    "    # deviation from ideal course load\n",
+    "    ## course load for that month is adjusted to a proportion of total course load\n",
+    "    ## ideal course load for that month is the proportion of availability for that month\n",
+    "    ## to the sum of of availability A[s]/sum(A)\n",
+    "    dev = sum(sum(cp.abs((x[c][s]*L[c]/sum(L)) - A[s]/sum(A)) for c in range(N)) for s in range(S))\n",
+    "\n",
+    "    f = phi*dist + (1-phi)*dev\n",
+    "\n",
+    "    #_____CONSTRAINTS_____\n",
+    "    g = []\n",
+    "\n",
+    "    # all courses must be allocated to exactly 1 period\n",
+    "    g.extend([cp.sum(x,axis=1) == np.ones(N)])\n",
+    "    # all prereqs must come first\n",
+    "    for i in range(N):\n",
+    "        for j in range(N):\n",
+    "            if P[i][j] > 0.99:\n",
+    "                g.extend([(x[j]*np.matrix([s for s in range(S)]).T)[0] >= (x[i]*np.matrix([s for s in range(S)]).T)[0] + 1])\n",
+    "    '''\n",
+    "    Extension:\n",
+    "    All course loads for a segment must be below max availability\n",
+    "\n",
+    "    sum(x[i][sem] * load[i]) <= A[sem]\n",
+    "    '''\n",
+    "    for t in range(S):\n",
+    "        g.extend([sum(cp.multiply(x[:,t], L)) <= A[t]])\n",
+    "\n",
+    "\n",
+    "    sol = cp.Problem(cp.Minimize(f), g)\n",
+    "    print(\"Solution:\", sol.solve())\n",
+    "    if type(dist) == int:\n",
+    "        print(\"dist: \", dist)\n",
+    "    else:\n",
+    "        print(\"dist: \", dist.value)\n",
+    "    if type(dev) == int:\n",
+    "        print(\"dev: \", dev)\n",
+    "    else:\n",
+    "        print(\"dev: \", dev.value)\n",
+    "    # ____ CONVERT TO TRUE FALSE _____\n",
+    "    recoverSchedule(x.value)\n",
+    "    return(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solution: 38.99999999952201\n",
-      "dist:  2.9999999999522458\n",
-      "dev:  36.00000000000023\n",
-      "schedule: [[ 2.25440526e-11  1.00000000e+00]\n",
-      " [ 1.00000000e+00 -1.25766032e-11]\n",
-      " [ 3.91385466e-11  1.00000000e+00]\n",
-      " [ 1.00000000e+00 -1.18350096e-11]]\n"
+      "Solution: 3.000000000131738\n",
+      "dist:  2.9999999999287885\n",
+      "dev:  3.000000000018779\n",
+      "________\n",
+      "Schedule:\n",
+      "interval 1: 2,4\n",
+      "interval 2: 1,3\n",
+      "interval 3: \n",
+      "________\n"
      ]
     }
    ],
    "source": [
-    "#_____INPUTS_____\n",
-    "\n",
-    "#course loads/ time availabilities for independent learners\n",
-    "A = np.array([2,4,2,4]) # availability by month\n",
+    "#_____TRIAL_____\n",
     "\n",
     "N = 4 # num courses\n",
-    "S = 2 # num semesters\n",
+    "S = 3 # num semesters\n",
+    "phi = 0.5\n",
     "L = np.array([2,4,2,4]) # load by course\n",
     "# P[i][j] = 1 iff i is a prereq of j\n",
     "P = np.array([[0, 0, 0, 0], \n",
@@ -93,61 +177,305 @@
     "          [0, 0, 0, 0],\n",
     "          [1, 0, 1, 0]]) \n",
     "\n",
+    "#course loads/ time availabilities for independent learners\n",
+    "A = np.array([8,4,0]) # availability by month\n",
     "\n",
-    "#_____DECISION VARIABLES_____\n",
-    "\n",
-    "#x[i][j] is boolean if course i assigned in semester j\n",
-    "x = cp.Variable((N,S),boolean=True)\n",
-    "\n",
-    "#_____OPTIMIZATION FUNCTION_____\n",
-    "# distance between course and prereq\n",
-    "dist = cp.sum([(x[j]*np.matrix([s for s in range(S)]).T)[0] - (x[i]*np.matrix([s for s in range(S)]).T)[0] for i in range(N) for j in range(N) if P[i][j] > 0.99])\n",
-    "# deviation from ideal course load\n",
-    "dev = sum(sum(cp.abs((x[c][s]*L[c]) - (sum(L)/S)) for c in range(N)) for s in range(S))\n",
-    "\n",
-    "f = dist + dev\n",
-    "\n",
-    "#_____CONSTRAINTS_____\n",
-    "g = []\n",
-    "\n",
-    "# all courses must be allocated to exactly 1 period\n",
-    "g.extend([cp.sum(x,axis=1) == np.ones(N)])\n",
-    "# all prereqs must come first\n",
-    "for i in range(N):\n",
-    "    for j in range(N):\n",
-    "        if P[i][j] > 0.99:\n",
-    "            g.extend([(x[j]*np.matrix([s for s in range(S)]).T)[0] >= (x[i]*np.matrix([s for s in range(S)]).T)[0] + 1])\n",
-    "\n",
-    "#l = sum(sum(cp.multiply(L,x)))\n",
-    "\n",
-    "\n",
-    "sol = cp.Problem(cp.Minimize(f), g)\n",
-    "print(\"Solution:\", sol.solve())\n",
-    "print(\"dist: \", dist.value)\n",
-    "print(\"dev: \", dev.value)\n",
-    "print(\"schedule:\", x.value)"
+    "calcSchedule(N,S,phi,L,P,A);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model Response to Parameters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[[False, True], [True, False], [False, True], [True, False]]"
-      ]
-     },
-     "execution_count": 117,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "***********************************\n",
+      "Solution: 2.9999999987041854\n",
+      "dist:  2.000000000055042\n",
+      "dev:  2.9999999999999796\n",
+      "________\n",
+      "Schedule:\n",
+      "interval 1: 2,4\n",
+      "interval 2: 1,3\n",
+      "________\n",
+      "***********************************\n",
+      "Solution: 2.499999999988322\n",
+      "dist:  2.0000000000015183\n",
+      "dev:  3.0000000000000018\n",
+      "________\n",
+      "Schedule:\n",
+      "interval 1: 2,3,4\n",
+      "interval 2: 1\n",
+      "________\n",
+      "***********************************\n",
+      "Solution: 1.9999999999910176\n",
+      "dist:  1.999999999991018\n",
+      "dev:  3.000000000000009\n",
+      "________\n",
+      "Schedule:\n",
+      "interval 1: 2,4\n",
+      "interval 2: 1,3\n",
+      "________\n"
+     ]
     }
    ],
    "source": [
-    "# ____ CONVERT TO TRUE FALSE _____\n",
-    "X = [[v > 0.99 for v in row] for row in x.value]\n",
-    "X"
+    "#_____Prioritization_____\n",
+    "\n",
+    "N = 4\n",
+    "S = 2\n",
+    "pphi = np.linspace(0,1,3)\n",
+    "\n",
+    "P = np.array([[0, 0, 0, 0], \n",
+    "          [1, 0, 0, 0],\n",
+    "          [0, 0, 0, 0],\n",
+    "          [1, 0, 0, 0]]) \n",
+    "\n",
+    "A = np.array([20,20]) # availability by month\n",
+    "\n",
+    "L = np.array([5,5,5,5]) # small values\n",
+    "\n",
+    "for phi in pphi:\n",
+    "    print(\"***********************************\")\n",
+    "    calcSchedule(N,S,phi,L,P,A);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "***********************************\n",
+      "Solution: 2.5000000000041687\n",
+      "dist:  1.9999999999972813\n",
+      "dev:  3.0000000000000018\n",
+      "________\n",
+      "Schedule:\n",
+      "interval 1: 2,4\n",
+      "interval 2: 1,3\n",
+      "________\n",
+      "***********************************\n",
+      "Solution: 2.499999999991916\n",
+      "dist:  2.00000000000708\n",
+      "dev:  3.000000000000002\n",
+      "________\n",
+      "Schedule:\n",
+      "interval 1: 2,4\n",
+      "interval 2: 1,3\n",
+      "________\n",
+      "***********************************\n",
+      "Solution: 2.50000000000932\n",
+      "dist:  1.9999999999973297\n",
+      "dev:  2.9999999999999996\n",
+      "________\n",
+      "Schedule:\n",
+      "interval 1: 2,4\n",
+      "interval 2: 1,3\n",
+      "________\n",
+      "***********************************\n",
+      "Solution: 2.5000000000726454\n",
+      "dist:  2.0000000000046607\n",
+      "dev:  2.9999999999998743\n",
+      "________\n",
+      "Schedule:\n",
+      "interval 1: 2,4\n",
+      "interval 2: 1,3\n",
+      "________\n",
+      "***********************************\n",
+      "Solution: None\n",
+      "dist:  None\n",
+      "dev:  None\n",
+      "No Solution\n",
+      "***********************************\n",
+      "Solution: 2.499999999991602\n",
+      "dist:  2.000000000000861\n",
+      "dev:  3.0\n",
+      "________\n",
+      "Schedule:\n",
+      "interval 1: 2,4\n",
+      "interval 2: 1,3\n",
+      "________\n"
+     ]
+    }
+   ],
+   "source": [
+    "#_____Course Load_____\n",
+    "\n",
+    "N = 4\n",
+    "S = 2\n",
+    "phi = 0.5\n",
+    "\n",
+    "P = np.array([[0, 0, 0, 0], \n",
+    "          [1, 0, 0, 0],\n",
+    "          [0, 0, 0, 0],\n",
+    "          [0, 0, 1, 0]]) \n",
+    "\n",
+    "A = np.array([20,20]) # availability by month\n",
+    "\n",
+    "L1 = np.array([1,1,1,1]) # small values\n",
+    "L2 = np.array([10,10,10,10]) # medium values\n",
+    "L3 = np.array([1,10,10,1]) # random mixture of values\n",
+    "L4 = np.array([1,10,1,10]) # prereqs are a lot smaller\n",
+    "L5 = np.array([100,100,100,100]) # large values\n",
+    "L6 = np.array([5,5,5,5]) # large but feasible values\n",
+    "\n",
+    "pL = [L1,L2,L3,L4,L5,L6]\n",
+    "\n",
+    "for L in pL:\n",
+    "    print(\"***********************************\")\n",
+    "    calcSchedule(N,S,phi,L,P,A);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "***********************************\n",
+      "Solution: 2.499999999991916\n",
+      "dist:  2.00000000000708\n",
+      "dev:  3.000000000000002\n",
+      "________\n",
+      "Schedule:\n",
+      "interval 1: 2,4\n",
+      "interval 2: 1,3\n",
+      "________\n",
+      "***********************************\n",
+      "Solution: 2.999999999990302\n",
+      "dist:  3.000000000002443\n",
+      "dev:  3.000000000000002\n",
+      "________\n",
+      "Schedule:\n",
+      "interval 1: 2,4\n",
+      "interval 2: 1,3\n",
+      "________\n",
+      "***********************************\n",
+      "Solution: None\n",
+      "dist:  None\n",
+      "dev:  None\n",
+      "No Solution\n"
+     ]
+    }
+   ],
+   "source": [
+    "#_____Course Dependencies_____\n",
+    "\n",
+    "N = 4\n",
+    "S = 2\n",
+    "phi = 0.5\n",
+    "\n",
+    "P1 = np.array([[0, 0, 0, 0], \n",
+    "          [1, 0, 0, 0],\n",
+    "          [0, 0, 0, 0],\n",
+    "          [0, 0, 1, 0]]) \n",
+    "\n",
+    "P2 = np.array([[0, 0, 0, 0], \n",
+    "          [1, 0, 0, 0],\n",
+    "          [0, 0, 0, 0],\n",
+    "          [1, 0, 1, 0]]) \n",
+    "\n",
+    "P3 = np.array([[0, 0, 0, 0], \n",
+    "          [1, 0, 0, 0],\n",
+    "          [1, 0, 0, 0],\n",
+    "          [1, 0, 1, 0]]) \n",
+    "\n",
+    "A = np.array([20,20]) # availability by month\n",
+    "\n",
+    "L = np.array([10,10,10,10]) # medium values\n",
+    "\n",
+    "pP = [P1,P2,P3]\n",
+    "\n",
+    "for P in pP:\n",
+    "    print(\"***********************************\")\n",
+    "    calcSchedule(N,S,phi,L,P,A);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "***********************************\n",
+      "Solution: None\n",
+      "dist:  None\n",
+      "dev:  None\n",
+      "No Solution\n",
+      "***********************************\n",
+      "Solution: 2.5000000000034324\n",
+      "dist:  2.0000000000040807\n",
+      "dev:  3.0000000000000036\n",
+      "________\n",
+      "Schedule:\n",
+      "interval 1: 2,4\n",
+      "interval 2: 1,3\n",
+      "________\n",
+      "***********************************\n",
+      "Solution: 2.4999999999877773\n",
+      "dist:  2.000000000001117\n",
+      "dev:  3.000000000000002\n",
+      "________\n",
+      "Schedule:\n",
+      "interval 1: 2,3,4\n",
+      "interval 2: 1\n",
+      "________\n",
+      "***********************************\n",
+      "Solution: 2.5833333333457764\n",
+      "dist:  1.9999999999943538\n",
+      "dev:  3.1666666666645145\n",
+      "________\n",
+      "Schedule:\n",
+      "interval 1: 2,3,4\n",
+      "interval 2: 1\n",
+      "________\n"
+     ]
+    }
+   ],
+   "source": [
+    "#_____Course Dependencies_____\n",
+    "\n",
+    "N = 4\n",
+    "S = 2\n",
+    "phi = 0.5\n",
+    "\n",
+    "P = np.array([[0, 0, 0, 0], \n",
+    "          [1, 0, 0, 0],\n",
+    "          [0, 0, 0, 0],\n",
+    "          [1, 0, 0, 0]]) \n",
+    "\n",
+    "A1 = np.array([10,10])\n",
+    "A2 = np.array([20,20])\n",
+    "A3 = np.array([40,40])\n",
+    "A4 = np.array([50,10])\n",
+    "\n",
+    "L = np.array([10,10,10,10]) # medium values\n",
+    "\n",
+    "pA = [A1,A2,A3,A4]\n",
+    "\n",
+    "for A in pA:\n",
+    "    print(\"***********************************\")\n",
+    "    calcSchedule(N,S,phi,L,P,A);"
    ]
   }
  ],
